--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "react": "^19.1.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
+    "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
