--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.6.1",
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1"
   },
